# rules_pi

./: .gitignore  WORKSPACE
pi/: defs.bzl
pi/private/: pi.bzl
pi/tests/: BUILD.bazel  expected_pi_100  expected_pi_default
